--- a/package.json
+++ b/package.json
@@ -6,11 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "^9.8.0",
+    "babel-plugin-macros": "^2.8.0",
+    "components": "^0.1.0",
+    "postcss-cli": "^7.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled": "^1.0.0",
+    "styled-components": "^5.1.1",
+    "tailwind.macro": "^1.0.0-alpha.10",
+    "tailwindcss": "^1.4.6",
     "web-vitals": "^1.1.1"
   },
+  "buildpacks": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -34,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.0",
+    "postcss-cli": "^7.1.1",
+    "tailwindcss": "^1.4.6"
   }
 }
